# JavaWeb

./: .gitignore
sky-agent-py/: README.md  pyproject.toml
sky-agent-py/app/: __init__.py  config.py  main.py  models.py
sky-agent-py/app/clients/: __init__.py  ops_api.py
sky-agent-py/app/services/: ops_agent.py
sky-common/src/main/java/com/sky/exception/: FlashSaleBusinessException.java
sky-pojo/src/main/java/com/sky/dto/: CategoryDTO.java  FlashSaleActivityDTO.java  FlashSaleActivityPageQueryDTO.java  FlashSalePurchaseDTO.java
sky-pojo/src/main/java/com/sky/entity/: FlashSaleActivity.java  FlashSaleOrder.java
sky-pojo/src/main/java/com/sky/vo/: FlashSaleActivityVO.java  FlashSalePurchaseVO.java  FlashSaleResultVO.java  OpsCategorySalesItemVO.java  OpsDishSalesItemVO.java  OpsOrderStatusSummaryVO.java  OpsSalesOverviewVO.java  OpsSalesTrendPointVO.java  OpsStoreStatusVO.java
sky-server/: pom.xml
sky-server/src/main/java/com/sky/aspect/: AutoFillAspect.java
sky-server/src/main/java/com/sky/config/: FlashSaleRedisConfiguration.java  RabbitMQConfiguration.java  WebMvcConfiguration.java
sky-server/src/main/java/com/sky/constant/: FlashSaleRabbitConstant.java  FlashSaleRedisConstant.java
sky-server/src/main/java/com/sky/listener/: FlashSaleOrderListener.java  (+1 more)
sky-server/src/main/resources/: application-dev.yml  application.yml
sky-server/src/main/resources/lua/: flashsale_purchase.lua
sky-server/src/main/resources/mapper/: FlashSaleActivityMapper.xml  FlashSaleOrderMapper.xml  OrderMapper.xml
sky-server/src/main/resources/sql/: flash_sale.sql
(+20 files in other folders)
